--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sass": "^5.0.0",
     "sass": "^1.35.0",
     "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0"
+    "style-loader": "^2.0.0",
+    "license": "UNLICENSED"
   }
 }
