--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "gulp-sass": "^5.0.0",
     "sass": "^1.35.0",
     "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0",
-    "license": "UNLICENSED"
+    "style-loader": "^2.0.0"
   }
 }
