--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["fontfamily", "fontsize", "mincho"]
+  "cSpell.words": ["bistre", "fontfamily", "fontsize", "mincho", "zorba"]
 }
