--- a/.hintrc
+++ b/.hintrc
@@ -1,27 +1,9 @@
 {
-  "extends": [
-    "development"
-  ],
-  "hints": {
-    "compat-api/css": [
-      "default",
-      {
-        "ignore": [
-          "width: fit-content"
-        ]
-      }
-    ],
-    "axe/name-role-value": [
-      "default",
-      {
-        "link-name": "off"
-      }
-    ],
-    "axe/forms": [
-      "default",
-      {
-        "label": "off"
-      }
-    ]
-  }
+  "extends": ["development"],
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not and_ff <= 105",
+    "not firefox <= 105"
+  ]
 }
