headerを修正 指摘箇所の修正完了

--- a/.hintrc
+++ b/.hintrc
@@ -12,6 +12,12 @@
       {
         "link-name": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
